@startuml

package "Entity" #DDDDDD {

    package "Base" #FFFFF {
        class SchoolClass
        class TeachingHour
        class TeachingSubject
        class Task
        class Content

        SchoolClass "1" --> "50" TeachingHour
        SchoolClass "1" --> "0..*" TeachingSubject
        TeachingHour "0..*" --> "1" TeachingSubject
        Task "0..*" --> "1" TeachingHour
    }

    package "Help" #FFFFFF {
        class CalendarLessonData {
            schoolClassId: number
            lessons: CalendarLesson[]
        }

        class CalendarLesson {
               lessonHour: LessonHour;
               teachingHourId: number;
               teachingSubjectId: number | null;
         }
         CalendarLessonData "1" --> "1" SchoolClass
    }

    CalendarLessonData "1" --> "*" CalendarLesson
    CalendarLesson "1" --> "1" TeachingHour
    CalendarLesson "1" --> "0..1" TeachingSubject
}

package "Calendar" #DDDDDD {
    class CalendarEvent<MetaType> {
        id?: string | number;
        start: Date;
        end?: Date;
        title: string;
        color?: EventColor;
        actions?: EventAction[];
        allDay?: boolean;
        cssClass?: string;
        resizable?: {
            beforeStart?: boolean;
            afterEnd?: boolean;
        };
        draggable?: boolean;
        meta?: MetaType;
    }

    class MetaType
    MetaType <|-- CalendarLesson
}
@enduml
